K8S/task2/mongodb-stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain # Retain the PVC when the StatefulSet is deleted
    whenScaled: Delete # Delete the PVC when the StatefulSet is scaled down
  serviceName: mongo-service
  replicas: 2
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    spec:
      accessModes: ["ReadWriteMany"]
      storageClassName: "rook-cephfs"
      resources:
        requests:
          storage: 2Gi
